--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+
+  <main>
+    <div class="action">
+      <div class="tache"><input type="text" name="Ajouter une tache" placeholder="ajouter une tache"></div>
+      <div class="ajout"><input type="text" name="Ajouter" placeholder="Ajouter"></div>
+    </div>
+
+
+    <div class="list">
+      <ul>
+        <li>Faire du sport <img src="/image/noter.png" alt=""><img src="/image/corbeille.png" alt="">
+
+        </li>
+        
+      </ul>
+    </div>
+  </main>
+</body>
+
 </html>
