ajout d' elements css travail sur le header et la classe action

--- a/index.html
+++ b/index.html
@@ -4,25 +4,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <link
+    rel="https://www.flaticon.com/fr/icone-animee-gratuite/carnet-de-notes_12743767?term=notes&page=1&position=3&origin=search"
+    ype="/image" href="">
+  <link rel="stylesheet" href="style.css">
+  <title>To-Do-List</title>
 </head>
 
 <body>
-
-  <main>
-    <div class="action">
-      <div class="tache"><input type="text" name="Ajouter une tache" placeholder="ajouter une tache"></div>
-      <div class="ajout"><input type="text" name="Ajouter" placeholder="Ajouter"></div>
-    </div>
-
-
-    <div class="list">
+  <header>
+    <nav>
+      <img src="/image/logo.svg" alt="">
       <ul>
-        <li>Faire du sport <img src="/image/noter.png" alt=""><img src="/image/corbeille.png" alt="">
-
-        </li>
-        
+        <li>Git Hub</li>
       </ul>
+
+    </nav>
+  </header>
+  <main>
+    <div class="box">
+      <div class="action">
+        <h1>TO-DO-LIST</h1>
+        <div class="tache"><input type="text" name="Ajouter une tache" placeholder="ajouter une tache">
+          <button>OK</button>
+        </div>
+
+      </div>
+
+      <div class="list">
+        <ul>
+          <li><i>Faire du sport </i><img src="/image/carnet-de-notes.jpg" alt=""><img src="/image/corbeille.png" alt="">
+            </>
+          </li>
+
+        </ul>
+      </div>
     </div>
   </main>
 </body>
