modernisation du site

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
       <div class="action">
         <h1>TO-DO-LIST</h1>
         <div class="tache"><input type="text" name="Ajouter une tache" placeholder="ajouter une tache">
-          <button>OK</button>
+          <button>+</button>
         </div>
 
       </div>
 
       <div class="list">
         <ul>
-          <li><i>Faire du sport </i><img src="/image/carnet-de-notes.jpg" alt=""><img src="/image/corbeille.png" alt="">
-            </>
-          </li>
+          <li>Faire du sport
 
+            <img src="/image/38206.svg" alt=""><span class="material-icons-outlined">
+              
+            </span>
+          </li>
         </ul>
       </div>
     </div>
