--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APP TO DO LIST</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap"
       rel="stylesheet"
@@ -16,6 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="animations.css" />
   </head>
   <body>
     <div class="container">
@@ -24,26 +23,15 @@
         <h1>To-Do-List</h1>
         <span>Whats' news ?</span>
       </div>
-
       <div class="ajouter-tache">
         <input type="text" id="input" placeholder="Ajoute une tâche" />
         <i id="boton-enter" class="fas fa-plus-circle"></i>
       </div>
-
-      <div class="section-tache">
-        <h3>To Do</h3>
-        <ul id="liste">
-          <!-- <li id="element">
-                <i class="far fa-circle co" data="realizer" id="0"></i>
-                <p class="text"> Faire devoir de mathx exemple </p>
-                <i class="fas fa-trash de" data="eliminer" id="0"></i> 
-            </li>
-            <li id="element">
-                <i class="far fa-circle co" data="realizer" id="0"></i>
-                <p class="text"> Laver ces vêtements </p>
-                <i class="fas fa-trash de" data="eliminer" id="0"></i> 
-            </li> -->
-        </ul>
+      <div class="liste-container">
+        <div class="section-tache">
+          <h3>To Do</h3>
+          <ul id="liste"></ul>
+        </div>
         <div class="section-tache">
           <h3>Terminé</h3>
           <ul id="listeTerminer"></ul>
